k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foodybuddy
  labels:
    name: foodybuddy
    environment: production
