k8s/payments-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: foodybuddy-payments
  labels:
    app: foodybuddy-payments
    component: backend
spec:
  containers:
  - name: foodybuddy-payments
    image: foodybuddy.prod.payments:latest
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8082
      protocol: TCP
    resources:
      requests:
        memory: "512Mi"
        cpu: "250m"
      limits:
        memory: "1Gi"
        cpu: "500m"
