k8s/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: foodybuddy-web
  labels:
    app: foodybuddy-web
    component: frontend
spec:
  containers:
  - name: foodybuddy-web
    image: foodybuddy.prod.web:latest
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 3000
      protocol: TCP
    resources:
      requests:
        memory: "256Mi"
        cpu: "250m"
      limits:
        memory: "512Mi"
        cpu: "500m"
